[java] Extracting build tools into a separate source subtree and a separate IDEA module to set different source levels for the build tools (11) and the main code (8)